Refactor Docker and Spark configurations for enhanced performance and maintainability
- Updated .dockerignore to exclude unnecessary files and improve build context.
- Refactored Dockerfile to streamline multi-stage builds and optimize application packaging.
- Removed main.css and plot-theme.js as part of the design system overhaul.
- Enhanced run.sh for better Spark job submission with security settings.
- Improved SparkConfig to disable Kerberos authentication and fix NullPointerException issues.
- Added logging enhancements in CampaignStatsController and CampaignStatsService for better traceability.